samples/_failures_safe/1761721804_edc1ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_331be7d9.c: In function ‘tokenize’:
./samples/SAFE/__tmp_331be7d9.c:168:22: error: expected ‘)’ at end of input
  168 |         strcpy(tokens
      |               ~      ^
      |                      )
./samples/SAFE/__tmp_331be7d9.c:168:9: error: too few arguments to function ‘strcpy’
  168 |         strcpy(tokens
      |         ^~~~~~
In file included from /usr/include/features.h:502,
                 from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/stdio.h:28,
                 from ./samples/SAFE/__tmp_331be7d9.c:2:
/usr/include/x86_64-linux-gnu/bits/string_fortified.h:77:1: note: declared here
   77 | __NTH (strcpy (char *__restrict __dest, const char *__restrict __src))
      | ^~~~~
./samples/SAFE/__tmp_331be7d9.c:168:9: error: expected declaration or statement at end of input
  168 |         strcpy(tokens
      |         ^~~~~~
./samples/SAFE/__tmp_331be7d9.c:168:9: error: expected declaration or statement at end of input
